--- a/tox.ini
+++ b/tox.ini
@@ -15,9 +15,9 @@ setenv =
        PYTHONDONTWRITEBYTECODE=1
        PYTHONWARNINGS=once
 deps =
-        django18: Django==1.8.17
-        django19: Django==1.9.12
-        django110: Django==1.10.5
+        django18: Django>=1.8,<1.9
+        django19: Django>=1.9,<.1.10
+        django110: Django>=1.10,<1.11
         djangomaster: https://github.com/django/django/archive/master.tar.gz
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
