--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,17 @@ addopts=--tb=short
 
 [tox]
 envlist =
-       py27-{lint,docs},
        {py27,py33,py34,py35}-django18,
-       {py27,py34,py35}-django19,
-       {py27,py34,py35}-django110,
-       {py27,py34,py35,py36}-django{master}
+       {py27,py34,py35}-django{19,110},
+       {py27,py34,py35,py36}-djangomaster,
+       lint,docs
+
+[travis:env]
+DJANGO =
+    1.8: django18
+    1.9: django19
+    1.10: django110
+    master: djangomaster
 
 [testenv]
 commands = ./runtests.py --fast {posargs} --coverage -rw
@@ -22,13 +28,15 @@ deps =
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
 
-[testenv:py27-lint]
+[testenv:lint]
+basepython = python2.7
 commands = ./runtests.py --lintonly
 deps =
         -rrequirements/requirements-codestyle.txt
         -rrequirements/requirements-testing.txt
 
-[testenv:py27-docs]
+[testenv:docs]
+basepython = python2.7
 commands = mkdocs build
 deps =
        -rrequirements/requirements-testing.txt
