Add toxenv/django env vars to codecov build vars

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
 
 after_success:
     - pip install codecov
-    - codecov -e TOX_ENV
+    - codecov -e TOXENV,DJANGO
 
 notifications:
     email: false
