--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@ addopts=--tb=short
 
 [tox]
 envlist =
-       {py27,py33,py34,py35}-django18,
-       {py27,py34,py35}-django{19,110},
+       {py27,py33,py34,py35,py36}-django18,
+       {py27,py34,py35,py36}-django{19,110},
        {py27,py34,py35,py36}-django111,
        {py35,py36}-djangomaster
        lint,docs
