--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,3 +72,4 @@ pages:
      - 'Mozilla Grant': 'topics/mozilla-grant.md'
      - 'Funding': 'topics/funding.md'
      - 'Release Notes': 'topics/release-notes.md'
+     - 'Jobs': 'topics/jobs.md'
