--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - DJANGO=1.9
     - DJANGO=1.10
     - DJANGO=1.11
+    - DJANGO=2.0
     - DJANGO=master
 
 matrix:
@@ -21,6 +22,8 @@ matrix:
         env: DJANGO=master
       - python: "3.6"
         env: DJANGO=1.11
+      - python: "3.6"
+        env: DJANGO=2.0
       - python: "3.3"
         env: DJANGO=1.8
       - python: "2.7"
@@ -30,11 +33,14 @@ matrix:
     exclude:
       - python: "2.7"
         env: DJANGO=master
+      - python: "2.7"
+        env: DJANGO=2.0
       - python: "3.4"
         env: DJANGO=master
 
     allow_failures:
       - env: DJANGO=master
+      - env: DJANGO=2.0
 
 install:
     - pip install tox tox-travis
