--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ deps =
         django19: Django>=1.9,<1.10
         django110: Django>=1.10,<1.11
         django111: Django>=1.11,<2.0
+        django20: Django>=2.0a1,<2.1
         djangomaster: https://github.com/django/django/archive/master.tar.gz
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
