--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
        {py27,py33,py34,py35}-django18,
        {py27,py34,py35}-django{19,110},
        {py27,py34,py35,py36}-django111,
+       {py34,py35,py36}-django20,
        {py35,py36}-djangomaster
        lint,docs
 
@@ -15,6 +16,7 @@ DJANGO =
     1.9: django19
     1.10: django110
     1.11: django111
+    2.0: django20
     master: djangomaster
 
 [testenv]
@@ -27,6 +29,7 @@ deps =
         django19: Django>=1.9,<1.10
         django110: Django>=1.10,<1.11
         django111: Django>=1.11,<2.0
+        django20: Django>=2.0a1,<2.1
         djangomaster: https://github.com/django/django/archive/master.tar.gz
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
