--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,7 @@ addopts=--tb=short
 
 [tox]
 envlist =
-       {py27,py33,py34,py35}-django18,
-       {py27,py34,py35}-django{19,110},
+       {py27,py34,py35}-django110,
        {py27,py34,py35,py36}-django111,
        {py34,py35,py36}-django20,
        {py35,py36}-djangomaster
@@ -12,8 +11,6 @@ envlist =
 
 [travis:env]
 DJANGO =
-    1.8: django18
-    1.9: django19
     1.10: django110
     1.11: django111
     2.0: django20
@@ -25,8 +22,6 @@ setenv =
        PYTHONDONTWRITEBYTECODE=1
        PYTHONWARNINGS=once
 deps =
-        django18: Django>=1.8,<1.9
-        django19: Django>=1.9,<1.10
         django110: Django>=1.10,<1.11
         django111: Django>=1.11,<2.0
         django20: Django>=2.0a1,<2.1
