Move isort/lint commands out of test runner

--- a/tox.ini
+++ b/tox.ini
@@ -37,12 +37,15 @@ deps =
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
 
-[testenv:lint]
-basepython = python2.7
-commands = ./runtests.py --lintonly
+[testenv:isort]
+commands = isort --recursive --check-only rest_framework tests {posargs}
 deps =
-        -rrequirements/requirements-codestyle.txt
-        -rrequirements/requirements-testing.txt
+       -rrequirements/requirements-codestyle.txt
+
+[testenv:lint]
+commands = flake8 rest_framework tests {posargs}
+deps =
+       -rrequirements/requirements-codestyle.txt
 
 [testenv:docs]
 basepython = python2.7
