--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
       - { python: "3.6", env: DJANGO=master }
       - { python: "3.6", env: DJANGO=1.11 }
       - { python: "3.6", env: DJANGO=2.0 }
-      - { python: "2.7", env: TOXENV=lint }
+      - { python: "3.6", env: "TOXENV=isort,lint" }
       - { python: "2.7", env: TOXENV=docs }
 
       - python: "3.6"
