--- a/requirements/requirements-optionals.txt
+++ b/requirements/requirements-optionals.txt
@@ -4,5 +4,4 @@ psycopg2==2.7.3
 markdown==2.6.4
 django-guardian==1.4.9
 django-filter==1.1.0
-coreapi==2.3.1
-coreschema==0.0.4
+-e git+https://github.com/core-api/python-client.git@b56b1d64fcebd765d458f546b3c38762fd65f042#egg=coreapi
