tox/travis: test optionals optionally

--- a/tox.ini
+++ b/tox.ini
@@ -27,14 +27,18 @@ deps =
         django20: Django>=2.0,<2.1
         django21: Django>=2.1b1,<2.2
         djangomaster: https://github.com/django/django/archive/master.tar.gz
+        optionals: -rrequirements/requirements-optionals.txt
         -rrequirements/requirements-testing.txt
-        -rrequirements/requirements-optionals.txt
 
 [testenv:dist]
 commands = ./runtests.py --fast {posargs} --no-pkgroot --staticfiles -rw
 deps =
         django
         -rrequirements/requirements-testing.txt
+
+[testenv:dist-optionals]
+commands = {[testenv:dist]commands}
+deps = {[testenv:dist]deps}
         -rrequirements/requirements-optionals.txt
 
 [testenv:lint]
