--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
        {py35,py36}-django21
        {py35,py36}-djangomaster,
        dist,lint,docs,
+       py36-django20-optionals,
 
 [travis:env]
 DJANGO =
@@ -14,6 +15,8 @@ DJANGO =
     2.0: django20
     2.1: django21
     master: djangomaster
+OPTIONALS =
+    1: optionals
 
 [testenv]
 commands = ./runtests.py --fast {posargs} --coverage -rw
@@ -27,15 +30,15 @@ deps =
         django20: Django>=2.0,<2.1
         django21: Django>=2.1b1,<2.2
         djangomaster: https://github.com/django/django/archive/master.tar.gz
+        optionals: -rrequirements/requirements-optionals.txt
         -rrequirements/requirements-testing.txt
-        -rrequirements/requirements-optionals.txt
 
 [testenv:dist]
 commands = ./runtests.py --fast {posargs} --no-pkgroot --staticfiles -rw
 deps =
         django
+        optionals: -rrequirements/requirements-optionals.txt
         -rrequirements/requirements-testing.txt
-        -rrequirements/requirements-optionals.txt
 
 [testenv:lint]
 basepython = python2.7
