--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ matrix:
       - { python: "3.6", env: DJANGO=master }
       - { python: "3.6", env: DJANGO=1.11 }
       - { python: "3.6", env: DJANGO=2.0 }
-      - { python: "3.6", env: DJANGO=2.0 OPTIONALS=1 }
+      - { python: "3.6", env: DJANGO=2.0 }
+      - { python: "3.6", env: TOXENV=py36-django20-optionals }
       - { python: "3.6", env: DJANGO=2.1 }
       - { python: "2.7", env: TOXENV=lint }
       - { python: "2.7", env: TOXENV=docs }
