--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ envlist =
        {py35,py36}-django21
        {py35,py36}-djangomaster,
        dist,lint,docs,
-       py36-django20-optionals,
 
 [travis:env]
 DJANGO =
@@ -15,8 +14,6 @@ DJANGO =
     2.0: django20
     2.1: django21
     master: djangomaster
-OPTIONALS =
-    1: optionals
 
 [testenv]
 commands = ./runtests.py --fast {posargs} --coverage -rw
@@ -37,8 +34,12 @@ deps =
 commands = ./runtests.py --fast {posargs} --no-pkgroot --staticfiles -rw
 deps =
         django
-        optionals: -rrequirements/requirements-optionals.txt
         -rrequirements/requirements-testing.txt
+
+[testenv:dist-optionals]
+commands = {[testenv:dist]commands}
+deps = {[testenv:dist]deps}
+        -rrequirements/requirements-optionals.txt
 
 [testenv:lint]
 basepython = python2.7
