--- a/tox.ini
+++ b/tox.ini
@@ -21,24 +21,25 @@ envdir = {toxworkdir}/venvs/{envname}
 setenv =
        PYTHONDONTWRITEBYTECODE=1
        PYTHONWARNINGS=once
+       base: _DRF_TESTS_OPTIONAL_DEPS=
 deps =
         django110: Django>=1.10,<1.11
         django111: Django>=1.11,<2.0
         django20: Django>=2.0,<2.1
         django21: Django>=2.1b1,<2.2
         djangomaster: https://github.com/django/django/archive/master.tar.gz
-        optionals: -rrequirements/requirements-optionals.txt
+        {env:_DRF_TESTS_OPTIONAL_DEPS:-rrequirements/requirements-optionals.txt}
         -rrequirements/requirements-testing.txt
 
-[testenv:dist]
+[testenv:dist-base]
 commands = ./runtests.py --fast {posargs} --no-pkgroot --staticfiles -rw
 deps =
         django
         -rrequirements/requirements-testing.txt
 
-[testenv:dist-optionals]
-commands = {[testenv:dist]commands}
-deps = {[testenv:dist]deps}
+[testenv:dist]
+commands = {[testenv:dist-base]commands}
+deps = {[testenv:dist-base]deps}
         -rrequirements/requirements-optionals.txt
 
 [testenv:lint]
