python 3.7 to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
       - { python: "3.6", env: TOXENV=base }
       - { python: "2.7", env: TOXENV=lint }
       - { python: "2.7", env: TOXENV=docs }
+      - { python: "3.7", env: DJANGO=master }
+      - { python: "3.7", env: DJANGO=2.1 }
 
       - python: "3.6"
         env: TOXENV=dist
