Add test for monkey-patched decimal in Python 2.7
For #6105

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ deps =
         django20: Django>=2.0,<2.1
         django21: Django>=2.1b1,<2.2
         djangomaster: https://github.com/django/django/archive/master.tar.gz
+        py27: m3-cdecimal
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
 
