--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ matrix:
 
     allow_failures:
       - env: DJANGO=master
+      - env: DJANGO=2.2
 
 install:
     - pip install tox tox-venv tox-travis
