added django 3.0 & removed vesion below 2.1 from martrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,15 @@ matrix:
     fast_finish: true
     include:
 
-      - { python: "3.5", env: DJANGO=1.11 }
-      - { python: "3.5", env: DJANGO=2.0 }
       - { python: "3.5", env: DJANGO=2.1 }
       - { python: "3.5", env: DJANGO=2.2 }
 
-      - { python: "3.6", env: DJANGO=1.11 }
-      - { python: "3.6", env: DJANGO=2.0 }
+      - { python: "3.6", env: DJANGO=3.0 }
       - { python: "3.6", env: DJANGO=2.1 }
       - { python: "3.6", env: DJANGO=2.2 }
       - { python: "3.6", env: DJANGO=master }
 
-      - { python: "3.7", env: DJANGO=2.0 }
+      - { python: "3.7", env: DJANGO=3.0 }
       - { python: "3.7", env: DJANGO=2.1 }
       - { python: "3.7", env: DJANGO=2.2 }
       - { python: "3.7", env: DJANGO=master }
@@ -35,6 +32,7 @@ matrix:
 
     allow_failures:
       - env: DJANGO=master
+      - env: DJANGO=3.0
 
 install:
     - pip install tox tox-venv tox-travis
