--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
 [tox]
 envlist =
-       {py35,py36}-django111,
-       {py35,py36,py37}-django20,
        {py35,py36,py37}-django21
        {py35,py36,py37}-django22
+       {py36,py37}-django30,
        {py36,py37}-djangomaster,
        base,dist,lint,docs,
 
 [travis:env]
 DJANGO =
     1.11: django111
-    2.0: django20
     2.1: django21
     2.2: django22
+    3.0: django30
     master: djangomaster
 
 [testenv]
@@ -22,10 +21,9 @@ setenv =
        PYTHONDONTWRITEBYTECODE=1
        PYTHONWARNINGS=once
 deps =
-        django111: Django>=1.11,<2.0
-        django20: Django>=2.0,<2.1
         django21: Django>=2.1,<2.2
         django22: Django>=2.2,<3.0
+        django30: Django>=3.0a1,<3.1
         djangomaster: https://github.com/django/django/archive/master.tar.gz
         -rrequirements/requirements-testing.txt
         -rrequirements/requirements-optionals.txt
