add mypy setup to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist =
        {py35,py36,py37}-django21
        {py35,py36,py37}-django22
        {py36,py37}-djangomaster,
-       base,dist,lint,docs,
+       base,dist,lint,docs,mypy,
 
 [travis:env]
 DJANGO =
@@ -57,3 +57,9 @@ commands = mkdocs build
 deps =
        -rrequirements/requirements-testing.txt
        -rrequirements/requirements-documentation.txt
+
+[testenv:mypy]
+basepython = python3.7
+commands = mypy ./rest_framework
+deps =
+        -rrequirements/requirements-mypy.txt
