Python 3.8 is only supported since Django 3.0

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
        {py35,py36}-django111,
-       {py35,py36,py37,py38}-django20,
-       {py35,py36,py37,py38}-django21
-       {py35,py36,py37,py38}-django22
+       {py35,py36,py37}-django20,
+       {py35,py36,py37}-django21
+       {py35,py36,py37}-django22
        {py36,py37,py38}-djangomaster,
        base,dist,lint,docs,
 
