django 3.0 in matrix with allow failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,13 @@ matrix:
       - { python: "3.6", env: DJANGO=2.0 }
       - { python: "3.6", env: DJANGO=2.1 }
       - { python: "3.6", env: DJANGO=2.2 }
+      - { python: "3.6", env: DJANGO=3.0 }
       - { python: "3.6", env: DJANGO=master }
 
       - { python: "3.7", env: DJANGO=2.0 }
       - { python: "3.7", env: DJANGO=2.1 }
       - { python: "3.7", env: DJANGO=2.2 }
+      - { python: "3.7", env: DJANGO=3.0 }
       - { python: "3.7", env: DJANGO=master }
 
       - { python: "3.8", env: DJANGO=master }
@@ -37,6 +39,7 @@ matrix:
 
     allow_failures:
       - env: DJANGO=master
+      - env: DJANGO=3.0
 
 install:
     - pip install tox tox-venv tox-travis
